# paris-system-2

./: .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
.tmp/sessions/2026-03-05-topic-matcher/: context.md
analyzer/: comparison.py  deduplicator.py  keywords.py  preprocessing.py  scraper.py  topic_model.py
collectors/: arxiv_collector.py  base.py  habr_collector.py  hackernews_collector.py  techcrunch_collector.py
tests/: test_comparison.py  test_database.py  test_keybert.py  test_preprocessing.py
ui/: app.py
