[tool.poetry]
name = "topic-matcher"
version = "0.1.0"
description = "Cross-source topic matching system"
authors = ["Topic Matcher Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.28.0"
beautifulsoup4 = ">=4.11.0"
lxml = ">=4.9.0"
numpy = ">=1.21.0"
pandas = ">=1.4.0"
scikit-learn = ">=1.1.0"
streamlit = ">=1.22.0"
plotly = ">=5.10.0"
keybert = ">=0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
flake8 = ">=5.0.0"
mypy = ">=0.990"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
